--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,6 @@ url = "https://github.com/sryu1/pysettings"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-[tool.poetry.dev-dependencies]
-git+https://github.com/sryu1/pysettings = "*"
-
 [build-system]
 requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
