--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 description = "A module for loading and saving variables to and from a JSON file"
 authors = ["sryu1"]
 url = "https://github.com/sryu1/pysettings"
+py_modules = ["pysettings"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+
+[tool.poetry.dev-dependencies]
+git+https://github.com/sryu1/pysettings = "*"
 
 [build-system]
 requires = ["setuptools"]
