--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pysettings"
 version = "0.1.0"
+
+[project.urls]
+"Homepage" = "https://github.com/sryu1/pysettings"
+"Bug Tracker" = "https://github.com/sryu1/pysettings/issues"
