Update name to pysettings-manager

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pysettings"
+name = "pysettings-manager"
 version = "0.1.0"
 
 [project.urls]
-"Homepage" = "https://github.com/sryu1/pysettings"
-"Bug Tracker" = "https://github.com/sryu1/pysettings/issues"
+"Homepage" = "https://github.com/sryu1/pysettings-manager"
+"Bug Tracker" = "https://github.com/sryu1/pysettings-manager/issues"
