--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pysettings-manager"
-version = "0.1.0"
-
+version = "0.1.1"
+readme = "README.md"
+description = "A python module for saving and loading settings"
 [project.urls]
 "Homepage" = "https://github.com/sryu1/pysettings-manager"
 "Bug Tracker" = "https://github.com/sryu1/pysettings-manager/issues"
