--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pysettings-manager"
-version = "0.1.2"
+version = "0.1.3"
 readme = "README.md"
 description = "A python module for saving and loading settings"
 requires-python = ">=3.7"
+classifiers=[
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    ]
 
 [project.urls]
 "Homepage" = "https://github.com/sryu1/pysettings-manager"
